--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ subjects:
 - !lcsh 'Suffolk (England) -- Description and travel'
 - !lcsh 'Norfolk (England) -- Description and travel'
 - !lcc 'DA'
+- GITenberg
 title: Through East Anglia in a Motor Car
 url: http://www.gutenberg.org/ebooks/38938
